netalertx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netalertx
  namespace: netalertx
  labels:
    app: netalertx
spec:
  type: ClusterIP
  selector:
    app: netalertx
  ports:
    - name: http
      port: 20211
      targetPort: 20211
