netalertx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netalertx
  namespace: netalertx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - netalertx.apps.k8s.enros.me
      secretName: netalertx-tls
  rules:
    - host: netalertx.apps.k8s.enros.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netalertx
                port:
                  number: 20211
